# Conways-Game-Of-Life

./: .gitmodules  CMakeLists.txt  README.md
src/: game_context.cpp  game_context.h  main.cpp  pattern.cpp  pattern.h
